@@ -1,3 +1,7 @@
+2002-07-08  Wakaba <w@suika.fam.cx>
+
+	* MessageDeliveryStatus.pm: New module.
+
 2002-07-02  Wakaba <w@suika.fam.cx>
 
 	* Multipart.pm:
